--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "clientside-require": "^4.7.2",
     "npm": "^6.5.0",
     "todomvc-app-css": "^2.0.1",
     "todomvc-common": "^1.0.1",
