--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "private": true,
   "dependencies": {
-    "clientside-require": "^4.7.2",
     "npm": "^6.5.0",
     "todomvc-app-css": "^2.0.1",
-    "todomvc-common": "^1.0.1",
-    "uuid": "^3.3.2"
+    "todomvc-common": "^1.0.1"
   },
   "devDependencies": {
     "jasmine": "^3.3.1",
